--- a/src/index.html
+++ b/src/index.html
@@ -2,50 +2,50 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta charset="UTF-8"/>
+  <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"/>
+  <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
 
   <!-- Базовые мета-теги для поисковиков -->
   <title>Заголовок</title>
 
   <!-- Иконки для страницы -->
-  <link rel="shortcut icon" href="img/favicons/favicon.ico" type="image/x-icon">
-  <link rel="icon" sizes="16x16" href="img/favicons/favicon-16x16.png" type="image/png">
-  <link rel="icon" sizes="32x32" href="img/favicons/favicon-32x32.png" type="image/png">
-  <link rel="apple-touch-icon-precomposed" href="img/favicons/apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
+  <link href="img/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="img/favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="img/favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="img/favicons/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
+  <link href="img/favicons/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+  <link href="img/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+  <link href="img/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+  <link href="img/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="img/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+  <link href="img/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="img/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+  <link href="img/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <link href="img/favicons/apple-touch-icon-167x167.png" rel="apple-touch-icon" sizes="167x167">
+  <link href="img/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="img/favicons/apple-touch-icon-1024x1024.png" rel="apple-touch-icon" sizes="1024x1024">
 
   <!-- Метатеги которые выводят информацию о странице в поисковой запрос -->
-  <meta name="description" content="описание не длиннее 155 символов" />
-  <meta name="keywords" content="мета-теги, шаблон, html, css, acr0matic" />
+  <meta content="описание не длиннее 155 символов" name="description"/>
+  <meta content="мета-теги, шаблон, html, css, acr0matic" name="keywords"/>
 
   <!-- Метатеги для ссылок в социальных сетях -->
-  <meta property="og:locale" content="ru_RU" />
-  <meta property="og:title" content="">
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="">
+  <meta content="ru_RU" property="og:locale"/>
+  <meta content="" property="og:title">
+  <meta content="" property="og:description"/>
+  <meta content="" property="og:image">
 
   <!-- Контролирует поведение поисковых систем при индексации страницы -->
-  <meta name="robots" content="index,follow" />
+  <meta content="index,follow" name="robots"/>
 
   <!-- Покраска адресной строки в мобильных Chrome, Firefox OS и Opera -->
-  <meta name="theme-color" content="#4285f4" />
+  <meta content="#4285f4" name="theme-color"/>
 
   <!-- Покраска для iOS Safari -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#4285f4">
+  <meta content="yes" name="apple-mobile-web-app-capable"/>
+  <meta content="#4285f4" name="apple-mobile-web-app-status-bar-style">
 
   <!-- Место для счетков и аналитики -->
 
@@ -53,35 +53,35 @@
 
   <!-- Стили -->
   <!-- build:css css/style.min.css -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link href="css/style.css" rel="stylesheet"/>
   <!-- endbuild -->
 </head>
 
 <body>
-  <!-- Шапка -->
-  <header id="header">
+<!-- Шапка -->
+<header id="header">
 
-  </header>
+</header>
 
-  <!-- Основной контент -->
-  <main>
-    <section>
+<!-- Основной контент -->
+<main>
+  <section>
 
-    </section>
-  </main>
+  </section>
+</main>
 
-  <!-- Подвал -->
-  <footer id="footer">
+<!-- Подвал -->
+<footer id="footer">
 
-  </footer>
+</footer>
 
-  <!-- Скрипты -->
-  <!-- build:js js/script.min.js -->
-  <script src="scripts/libraries/lazyload.js"></script>
-  <script src="scripts/libraries/lodash.js"></script>
+<!-- Скрипты -->
+<!-- build:js js/script.min.js -->
+<script src="scripts/libraries/lazyload.js"></script>
+<script src="scripts/libraries/lodash.js"></script>
 
-  <script src="scripts/main.js"></script>
-  <!-- endbuild -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
 </body>
 
 </html>
