--- a/src/index.html
+++ b/src/index.html
@@ -107,16 +107,38 @@
   </header>
 
   <!-- Основной контент -->
-  <main>
+  <main id="home">
+    <section class="section" id="catalog">
+      <div class="container">
+        <div class="catalog">
+          <h2 class="section__title">Что мы производим?</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="service">
+      <div class="container">
+        <div class="service">
+          <h2 class="section__title">Другие услуги</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
+
     <section class="section" id="map">
       <div class="container">
         <div class="map">
           <h2 class="section__title">География нашей работы</h2>
 
-          <div class="row align-items-center">
+          <div class="row">
             <div class="col-6">
-              <div id="map-container" class="map">
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%25&amp;height=475&amp;lang=ru_RU&amp;scroll=false"></script>
+              <div id="map-wrapper" class="map__wrapper">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
               </div>
               <!-- /.map -->
             </div>
@@ -153,6 +175,28 @@
           <!-- /.row -->
         </div>
         <!-- /.map -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="portfolio">
+      <div class="container">
+        <div class="portfolio">
+          <h2 class="section__title">Наши работы</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="usefull">
+      <div class="container">
+        <div class="usefull">
+          <h2 class="section__title">Полезные материалы</h2>
+
+        </div>
+        <!-- /.callback -->
       </div>
       <!-- /.container -->
     </section>
@@ -287,6 +331,27 @@
       <!-- /.container -->
     </section>
 
+    <section class="section" id="feedback">
+      <div class="container">
+        <div class="feedback">
+          <h2 class="section__title">Отзывы наших клиентов</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="callback">
+      <div class="container">
+        <div class="callback">
+          <h2 class="section__title">Если у вас остались вопросы</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
   </main>
 
   <!-- Подвал -->
