--- a/src/index.html
+++ b/src/index.html
@@ -190,11 +190,127 @@
       <!-- /.container -->
     </section>
 
-    <section class="section" id="usefull">
+    <section class="section" id="useful">
       <div class="container">
-        <div class="usefull">
-          <h2 class="section__title">Полезные материалы</h2>
+        <div class="useful">
+          <div class="section__header">
+            <h2 class="section__title">Полезные материалы</h2>
+            <a href="" class="link link--nav link--arrow">
+              Все статьи
+              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                  fill="#969696"></path>
+              </svg>
+            </a>
+          </div>
+          <!-- /.section__header -->
 
+          <div class="swiper-container slider-useful">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">27.09.21</time>
+                      <span class="useful__views">
+                        340
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+            </div>
+            <!-- /.swiper-wrapper -->
+          </div>
+          <!-- /.swiper-container slider-useful -->
         </div>
         <!-- /.callback -->
       </div>
@@ -363,8 +479,10 @@
   <!-- build:js js/script.min.js -->
   <script src="scripts/libraries/lazyload.js"></script>
   <script src="scripts/libraries/lodash.js"></script>
+  <script src="scripts/libraries/swiper.js"></script>
 
   <script src="scripts/main.js"></script>
+  <script src="scripts/slider.js"></script>
   <!-- endbuild -->
 </body>
 
