--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,7 @@
           </div>
           <!-- /.section__header -->
 
-          <div class="swiper-container slider-useful">
+          <div class="swiper swiper--overflow slider-useful">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="useful__card">
@@ -310,7 +310,7 @@
             </div>
             <!-- /.swiper-wrapper -->
           </div>
-          <!-- /.swiper-container slider-useful -->
+          <!-- /.swiper swiper--overflow slider-useful -->
         </div>
         <!-- /.callback -->
       </div>
@@ -450,8 +450,98 @@
     <section class="section" id="feedback">
       <div class="container">
         <div class="feedback">
-          <h2 class="section__title">Отзывы наших клиентов</h2>
+          <div class="section__header">
+            <h2 class="section__title">Отзывы наших клиентов</h2>
+            <a href="" class="link link--nav link--arrow">
+              Все отзывы
+              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                  fill="#969696"></path>
+              </svg>
+            </a>
+          </div>
+          <!-- /.section__header -->
 
+          <p class="section__description">За 10 лет работы, мы успели собрать множество положительных отзывов о своей работе. Большинство клиентов остается довольными и рекомендуют наши услуги и изделия своим знакомым и друзьям. Мы дорожим хорошей репутацией и доверием к нашей деятельности.</p>
+
+          <div class="swiper swiper--overflow slider-feedback">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="feedback__card">
+                  <div class="feedback__picture">
+                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
+                  </div>
+                  <!-- /.feedback__picture -->
+
+                  <div class="feedback__wrapper">
+                    <p class="feedback__text">
+                      Благодарю Вас за установку сеточки на балконе! Душа моя спокойна по поводу моего котика, надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                    </p>
+
+                    <div class="feedback__footer">
+                      <span class="feedback__name">Александр А.</span>
+                      <time class="feedback__date">21.08.21</time>
+                    </div>
+                    <!-- /.feedback__footer -->
+                  </div>
+                  <!-- /.feedback__wrapper -->
+                </div>
+                <!-- /.feedback__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="feedback__card">
+                  <div class="feedback__picture">
+                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
+                  </div>
+                  <!-- /.feedback__picture -->
+
+                  <div class="feedback__wrapper">
+                    <p class="feedback__text">
+                      Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                    </p>
+
+                    <div class="feedback__footer">
+                      <span class="feedback__name">Александр А.</span>
+                      <time class="feedback__date">21.08.21</time>
+                    </div>
+                    <!-- /.feedback__footer -->
+                  </div>
+                  <!-- /.feedback__wrapper -->
+                </div>
+                <!-- /.feedback__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="feedback__card">
+                  <div class="feedback__picture">
+                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
+                  </div>
+                  <!-- /.feedback__picture -->
+
+                  <div class="feedback__wrapper">
+                    <p class="feedback__text">
+                      Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                    </p>
+
+                    <div class="feedback__footer">
+                      <span class="feedback__name">Александр А.</span>
+                      <time class="feedback__date">21.08.21</time>
+                    </div>
+                    <!-- /.feedback__footer -->
+                  </div>
+                  <!-- /.feedback__wrapper -->
+                </div>
+                <!-- /.feedback__card -->
+              </div>
+              <!-- /.swiper-slide -->
+            </div>
+            <!-- /.swiper-wrapper -->
+          </div>
+          <!-- /.swiper swiper--overflow slider-feedback -->
         </div>
         <!-- /.callback -->
       </div>
