--- a/src/index.html
+++ b/src/index.html
@@ -465,7 +465,7 @@
 
           <p class="section__description">За 10 лет работы, мы успели собрать множество положительных отзывов о своей работе. Большинство клиентов остается довольными и рекомендуют наши услуги и изделия своим знакомым и друзьям. Мы дорожим хорошей репутацией и доверием к нашей деятельности.</p>
 
-          <div class="swiper swiper--overflow slider-feedback">
+          <div class="swiper slider-feedback">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="feedback__card">
@@ -551,8 +551,38 @@
     <section class="section" id="callback">
       <div class="container">
         <div class="callback">
-          <h2 class="section__title">Если у вас остались вопросы</h2>
+          <div class="row">
+            <div class="col-6">
+              <h2 class="section__title">Если у вас остались вопросы</h2>
+              <p class="section__description">
+                Свяжитесь с нашими менеджерами по горячей линии
+                <br>
+                <a class="link link--contact" href="tel:+7 926 630-45-56">+7 926 630-45-56</a>
+                <br>
+                или закажите обратный звонок
+              </p>
 
+              <form action="" class="form form-callback">
+                <div class="input me-3">
+                  <input placeholder="Номер телефона" autocomplete="off" type="" name="" class="input__field">
+                  <img data-tippy-content="" class="input__warning" src="" alt="">
+                </div>
+                <!-- /.input -->
+
+                <button data-sending="Отправка..." class="form__button button button-primary" type="submit">Отправить</button>
+              </form>
+            </div>
+            <!-- /.col-6 -->
+
+            <div class="col-5 offset-1">
+              <div class="callback__picture">
+                <img src="img/block/callback/call.jpg" alt="" class="callback__image image image--cover">
+              </div>
+              <!-- /.callback__picture -->
+            </div>
+            <!-- /.col-6 -->
+          </div>
+          <!-- /.row -->
         </div>
         <!-- /.callback -->
       </div>
