feat: верстка футера

--- a/src/index.html
+++ b/src/index.html
@@ -592,7 +592,178 @@
 
   <!-- Подвал -->
   <footer id="footer">
+    <div class="container">
+      <div class="footer">
+        <div class="footer__row">
 
+        </div>
+        <!-- /.footer__row -->
+
+        <div class="footer__row">
+          <div class="footer__nav">
+            <a href="" class="footer__title footer__link link link--nav">Навигация</a>
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Главная</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Каталог</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Услуги</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Портфолио</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Статьи</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!-- /.footer__nav -->
+
+          <div class="footer__nav">
+            <a href="" class="footer__title footer__link link link--nav">Москитные сетки</a>
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Внутренняя сетка</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Москитная дверь</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Стандарт</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Антипыль</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Антипыльца</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Антикошка</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Ультравью</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Проведал</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!-- /.footer__nav -->
+
+          <div class="footer__nav">
+            <a href="" class="footer__title footer__link link link--nav">Рулонные шторы</a>
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Жалюзи</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">День-Ночь</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Плиссе</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Гранд</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Гранд День-Ночь</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Плиссе</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!-- /.footer__nav -->
+
+          <div class="footer__nav">
+            <a href="" class="footer__title footer__link  link link--nav">Услуги</a>
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Тонировка окон</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Регулировка окон</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Замки от детей</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Замена уплотнителя</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="" class="nav__link link link--nav">Ограничители</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!-- /.footer__nav -->
+        </div>
+        <!-- /.footer__row -->
+
+        <div class="footer__row">
+          <div class="footer__social">
+            <div class="footer__logo logo logo--footer mb-4">
+              <a href="">
+                <img alt="" class="logo__image" src="img/logo--footer.svg">
+              </a>
+            </div>
+            <!-- /.header__logo logo -->
+
+            <a href="" class="link">
+              <img class="footer__icon me-3 ms-5" src="img/icons/social/instagram.svg" alt="">
+            </a>
+
+            <a href="" class="link">
+              <img class="footer__icon" src="img/icons/social/vk.svg" alt="">
+            </a>
+          </div>
+          <!-- /.footer__company -->
+
+          <div class="footer__company">
+            <a href="" class="footer__privacy link link--nav mt-2">Политика конфиденциальности</a>
+            <span class="footer__copyright mt-1">© 2021 Все права защищены. «BESTFORHOME24.RU»</span>
+          </div>
+          <!-- /.footer__company -->
+        </div>
+        <!-- /.footer__row -->
+      </div>
+      <!-- /.footer -->
+    </div>
+    <!-- /.container -->
   </footer>
 
   <!-- Скрипты -->
