feat: верстка выпадающих списков

--- a/src/index.html
+++ b/src/index.html
@@ -73,16 +73,57 @@
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link link link--nav" href="">Главная</a></li>
             <li class="nav__item dropdown">
-              <a class="nav__link link link--nav d-flex align-items-center" href="">
+              <span class="dropdown__header nav__link link link--nav d-flex align-items-center">
                 Каталог
                 <img alt="" class="dropdown__arrow" src="img/icons/control/arrow__dropdown.svg">
-              </a>
+              </span>
+
+              <div class="dropdown__content">
+                <div class="row">
+                  <div class="col-6 d-flex flex-column align-items-start">
+                    <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Москитные сетки</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/interior">Внутренняя</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Москитная дверь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Стандарт</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антипыль</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антипыльца</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антикошка</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Ультравью</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Проведал</a>
+                  </div>
+                  <!-- /.col-6 -->
+
+                  <div class="col-6 d-flex flex-column align-items-start">
+                    <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Рулонные шторы</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/interior">Жалюзи</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">День-Ночь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Плиссе</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Гранд</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Гранд День-Ночь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Плиссе</a>
+                  </div>
+                  <!-- /.col-6 -->
+                </div>
+                <!-- /.row -->
+              </div>
             </li>
             <li class="nav__item dropdown">
-              <a class="nav__link link link--nav d-flex align-items-center" href="">
+              <span class="dropdown__header nav__link link link--nav d-flex align-items-center">
                 Услуги
                 <img alt="" class="dropdown__arrow" src="img/icons/control/arrow__dropdown.svg">
-              </a>
+              </span>
+
+              <div class="dropdown__content dropdown__content--small">
+                <div class="d-flex flex-column align-items-start">
+                  <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Тонировка окон</a>
+                  <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Регулировка окон</a>
+                  <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Замки от детей</a>
+                  <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Замена уплотнителя</a>
+                  <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Ограничители</a>
+                </div>
+                <!-- /.d-flex-->
+              </div>
+              <!-- /.dropdown__content -->
             </li>
             <li class="nav__item"><a class="nav__link link link--nav" href="">Портфолио</a></li>
             <li class="nav__item"><a class="nav__link link link--nav" href="">Статьи</a></li>
@@ -774,6 +815,7 @@
 
   <script src="scripts/main.js"></script>
   <script src="scripts/slider.js"></script>
+  <script src="scripts/header.js"></script>
   <!-- endbuild -->
 </body>
 
