--- a/src/index.html
+++ b/src/index.html
@@ -149,10 +149,51 @@
 
   <!-- Основной контент -->
   <main id="home">
+    <section id="hero" class="section">
+      <div class="container">
+        <div class="hero">
+          <div class="swiper slider-hero">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="hero__picture">
+                  <img class="hero__image image image--cover" src="img/page/main/hero/banner.jpg" alt="">
+                </div>
+                <!-- /.hero__picture -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="hero__picture">
+                  <img class="hero__image image image--cover" src="img/page/main/hero/banner-2.jpg" alt="">
+                </div>
+                <!-- /.hero__picture -->
+              </div>
+              <!-- /.swiper-slide -->
+            </div>
+            <!-- /.swiper-wrapper -->
+          </div>
+          <!-- /.swiper slider-hero -->
+        </div>
+        <!-- /.hero -->
+      </div>
+      <!-- /.container -->
+    </section>
+
     <section class="section" id="catalog">
       <div class="container">
         <div class="catalog">
           <h2 class="section__title">Что мы производим?</h2>
+
+        </div>
+        <!-- /.callback -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="calculator">
+      <div class="container">
+        <div class="service">
+          <h2 class="section__title">Рассчитайте стоимость самостоятельно</h2>
 
         </div>
         <!-- /.callback -->
